# vpktool

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/jni/: CMakeLists.txt  Containment.h  libvpk.c  vpk_jni.c
app/src/main/res/values/: strings.xml
